--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "WEBPACK_ENV=dev webpack-dev-server --inline --port 8089",
+    "dev": "WEBPACK_ENV=dev webpack-dev-server --inline --port 8088",
     "dist": "WEBPACK_ENV=online webpack -p",
-    "dev_win": "set WEBPACK_ENV=dev && webpack-dev-server --inline --port 8089",
+    "dev_win": "set WEBPACK_ENV=dev && webpack-dev-server --inline --port 8088",
     "dist_win": "set WEBPACK_ENV=online && webpack -p"
   },
   "author": "",
@@ -17,6 +17,7 @@
     "file-loader": "^0.11.2",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "html-withimg-loader": "^0.1.16",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^1.15.0",
